--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -12,23 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "None      15967\n",
-       "Other       394\n",
-       "Size_3      356\n",
-       "Size_4      196\n",
-       "Size_1       25\n",
-       "Size_0        7\n",
-       "Size_2        2\n",
-       "Name: Size, dtype: int64"
+       "None         9497\n",
+       "Source_7     2965\n",
+       "Source_9     1459\n",
+       "Source_11    1421\n",
+       "Source_13     786\n",
+       "Source_3      418\n",
+       "Source_1      137\n",
+       "Source_10     106\n",
+       "Source_2       86\n",
+       "Source_4       43\n",
+       "Source_6       19\n",
+       "Source_0        7\n",
+       "Source_12       2\n",
+       "Source_5        1\n",
+       "Name: Source , dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +46,11 @@
     "datos[\"Quote_Expiry_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
     "datos[\"Last_Modified_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
     "datos[\"Actual_Delivery_Date\"] = pd.to_numeric(datos[\"Actual_Delivery_Date\"], errors=\"coerce\")\n",
-    "datos[\"Size\"].value_counts()"
+    "datos[\"Size\"].value_counts()\n",
+    "datos[\"Sales_Contract_No\"].value_counts()\n",
+    "datos[\"Quote_Type\"].value_counts()\n",
+    "datos[\"Brand\"].value_counts()\n",
+    "datos[\"Source \"].value_counts()"
    ]
   },
   {
