--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,118 +12,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "None         9497\n",
-       "Source_7     2965\n",
-       "Source_9     1459\n",
-       "Source_11    1421\n",
-       "Source_13     786\n",
-       "Source_3      418\n",
-       "Source_1      137\n",
-       "Source_10     106\n",
-       "Source_2       86\n",
-       "Source_4       43\n",
-       "Source_6       19\n",
-       "Source_0        7\n",
-       "Source_12       2\n",
-       "Source_5        1\n",
-       "Name: Source , dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datos = pd.read_csv(\"Entrenamieto_ECI_2020.csv\")\n",
-    "datos[\"Price\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
-    "datos[\"Quote_Expiry_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
-    "datos[\"Last_Modified_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
-    "datos[\"Actual_Delivery_Date\"] = pd.to_numeric(datos[\"Actual_Delivery_Date\"], errors=\"coerce\")\n",
-    "datos[\"Size\"].value_counts()\n",
-    "datos[\"Sales_Contract_No\"].value_counts()\n",
-    "datos[\"Quote_Type\"].value_counts()\n",
-    "datos[\"Brand\"].value_counts()\n",
-    "datos[\"Source \"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16947 entries, 0 to 16946\n",
-      "Data columns (total 52 columns):\n",
-      " #   Column                              Non-Null Count  Dtype  \n",
-      "---  ------                              --------------  -----  \n",
-      " 0   ID                                  16947 non-null  int64  \n",
-      " 1   Region                              16947 non-null  object \n",
-      " 2   Territory                           16947 non-null  object \n",
-      " 3   Pricing, Delivery_Terms_Quote_Appr  16947 non-null  int64  \n",
-      " 4   Pricing, Delivery_Terms_Approved    16947 non-null  int64  \n",
-      " 5   Bureaucratic_Code_0_Approval        16947 non-null  int64  \n",
-      " 6   Bureaucratic_Code_0_Approved        16947 non-null  int64  \n",
-      " 7   Submitted_for_Approval              16947 non-null  int64  \n",
-      " 8   Bureaucratic_Code                   16947 non-null  object \n",
-      " 9   Account_Created_Date                16947 non-null  object \n",
-      " 10  Source                              16947 non-null  object \n",
-      " 11  Billing_Country                     16947 non-null  object \n",
-      " 12  Account_Name                        16947 non-null  object \n",
-      " 13  Opportunity_Name                    16947 non-null  object \n",
-      " 14  Opportunity_ID                      16947 non-null  int64  \n",
-      " 15  Sales_Contract_No                   16947 non-null  object \n",
-      " 16  Account_Owner                       16947 non-null  object \n",
-      " 17  Opportunity_Owner                   16947 non-null  object \n",
-      " 18  Account_Type                        16947 non-null  object \n",
-      " 19  Opportunity_Type                    16947 non-null  object \n",
-      " 20  Quote_Type                          16947 non-null  object \n",
-      " 21  Delivery_Terms                      16947 non-null  object \n",
-      " 22  Opportunity_Created_Date            16947 non-null  object \n",
-      " 23  Brand                               16947 non-null  object \n",
-      " 24  Product_Type                        16947 non-null  object \n",
-      " 25  Size                                16947 non-null  object \n",
-      " 26  Product_Category_B                  16947 non-null  object \n",
-      " 27  Price                               356 non-null    float64\n",
-      " 28  Currency                            16947 non-null  object \n",
-      " 29  Last_Activity                       16947 non-null  object \n",
-      " 30  Quote_Expiry_Date                   356 non-null    float64\n",
-      " 31  Last_Modified_Date                  356 non-null    float64\n",
-      " 32  Last_Modified_By                    16947 non-null  object \n",
-      " 33  Product_Family                      16947 non-null  object \n",
-      " 34  Product_Name                        16947 non-null  object \n",
-      " 35  ASP_Currency                        16947 non-null  object \n",
-      " 36  ASP                                 13738 non-null  float64\n",
-      " 37  ASP_(converted)_Currency            16947 non-null  object \n",
-      " 38  ASP_(converted)                     13738 non-null  float64\n",
-      " 39  Planned_Delivery_Start_Date         16947 non-null  object \n",
-      " 40  Planned_Delivery_End_Date           16947 non-null  object \n",
-      " 41  Month                               16947 non-null  object \n",
-      " 42  Delivery_Quarter                    16947 non-null  object \n",
-      " 43  Delivery_Year                       16947 non-null  int64  \n",
-      " 44  Actual_Delivery_Date                0 non-null      float64\n",
-      " 45  TRF                                 16947 non-null  int64  \n",
-      " 46  Total_Amount_Currency               16947 non-null  object \n",
-      " 47  Total_Amount                        16888 non-null  float64\n",
-      " 48  Total_Taxable_Amount_Currency       16947 non-null  object \n",
-      " 49  Total_Taxable_Amount                16947 non-null  float64\n",
-      " 50  Stage                               16947 non-null  object \n",
-      " 51  Prod_Category_A                     16947 non-null  object \n",
-      "dtypes: float64(8), int64(9), object(35)\n",
-      "memory usage: 6.7+ MB\n"
+      "Columna: ID\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Region\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Territory\n",
+      "4999\n",
+      "\n",
+      "Columna: Pricing, Delivery_Terms_Quote_Appr\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Pricing, Delivery_Terms_Approved\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Bureaucratic_Code_0_Approval\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Bureaucratic_Code_0_Approved\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Submitted_for_Approval\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Bureaucratic_Code\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Account_Created_Date\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Source\n",
+      "9497\n",
+      "\n",
+      "Columna: Billing_Country\n",
+      "27\n",
+      "\n",
+      "Columna: Account_Name\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Opportunity_Name\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Opportunity_ID\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Sales_Contract_No\n",
+      "6973\n",
+      "\n",
+      "Columna: Account_Owner\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Opportunity_Owner\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Account_Type\n",
+      "112\n",
+      "\n",
+      "Columna: Opportunity_Type\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Quote_Type\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Delivery_Terms\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Opportunity_Created_Date\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Brand\n",
+      "15911\n",
+      "\n",
+      "Columna: Product_Type\n",
+      "15935\n",
+      "\n",
+      "Columna: Size\n",
+      "15967\n",
+      "\n",
+      "Columna: Product_Category_B\n",
+      "15928\n",
+      "\n",
+      "Columna: Price\n",
+      "15982\n",
+      "\n",
+      "Columna: Currency\n",
+      "16052\n",
+      "\n",
+      "Columna: Last_Activity\n",
+      "16947\n",
+      "\n",
+      "Columna: Quote_Expiry_Date\n",
+      "4625\n",
+      "\n",
+      "Columna: Last_Modified_Date\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Last_Modified_By\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Product_Family\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Product_Name\n",
+      "No hay none\n",
+      "\n",
+      "Columna: ASP_Currency\n",
+      "No hay none\n",
+      "\n",
+      "Columna: ASP\n",
+      "No hay none\n",
+      "\n",
+      "Columna: ASP_(converted)_Currency\n",
+      "No hay none\n",
+      "\n",
+      "Columna: ASP_(converted)\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Planned_Delivery_Start_Date\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Planned_Delivery_End_Date\n",
+      "75\n",
+      "\n",
+      "Columna: Month\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Delivery_Quarter\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Delivery_Year\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Actual_Delivery_Date\n",
+      "16947\n",
+      "\n",
+      "Columna: TRF\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Total_Amount_Currency\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Total_Amount\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Total_Taxable_Amount_Currency\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Total_Taxable_Amount\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Stage\n",
+      "No hay none\n",
+      "\n",
+      "Columna: Prod_Category_A\n",
+      "No hay none\n",
+      "\n"
      ]
     }
    ],
+   "source": [
+    "datos_csv = pd.read_csv(\"Entrenamieto_ECI_2020.csv\")\n",
+    "datos = datos_csv.replace({\"NaT\":\"None\", \"nan\":\"None\", \"NaN\":\"None\"})\n",
+    "\n",
+    "aux=0\n",
+    "for i in range(0, len(datos.columns)):\n",
+    "    print(\"Columna: \" + datos.columns[i])\n",
+    "    aux = datos[datos.columns[i]].value_counts()\n",
+    "    if \"None\" in aux.index:\n",
+    "        print(datos[datos.columns[i]].value_counts()[\"None\"])\n",
+    "    else:\n",
+    "        print(\"No hay none\")\n",
+    "    print(\"\") \n",
+    "    \n",
+    "#datos[\"Price\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
+    "#datos[\"Quote_Expiry_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
+    "#datos[\"Last_Modified_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
+    "#datos[\"Actual_Delivery_Date\"] = pd.to_numeric(datos[\"Actual_Delivery_Date\"], errors=\"coerce\")\n",
+    "#datos[\"Size\"].value_counts()\n",
+    "#datos[\"Sales_Contract_No\"].value_counts()\n",
+    "#datos[\"Quote_Type\"].value_counts()\n",
+    "#datos[\"Brand\"].value_counts()\n",
+    "#datos[\"Source\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "datos.info()"
    ]
