--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,14 @@
     "\n",
     "def columnas_invariantes(dataframe):\n",
     "    for i in range(0,len(dataframe.columns)):\n",
-    "        "
+    "        if (len(dataframe[dataframe.columns[i]].value_counts())==1):\n",
+    "            print(\"La columna \" + dataframe.columns[i] + \" tiene un solo dato\")\n",
+    "            print(\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -216,6 +218,12 @@
       "\n",
       "Columna: Prod_Category_A\n",
       "No hay None\n",
+      "\n",
+      "La columna Submitted_for_Approval tiene un solo dato\n",
+      "\n",
+      "La columna ASP_(converted)_Currency tiene un solo dato\n",
+      "\n",
+      "La columna Prod_Category_A tiene un solo dato\n",
       "\n"
      ]
     }
@@ -230,78 +238,15 @@
     "datos[\"Last_Modified_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
     "#datos[\"Actual_Delivery_Date\"] = pd.to_numeric(datos[\"Actual_Delivery_Date\"], errors=\"coerce\")\n",
     "\n",
-    "imprimir_proporciones_none(datos)    \n"
+    "imprimir_proporciones_none(datos)    \n",
+    "columnas_invariantes(datos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16947 entries, 0 to 16946\n",
-      "Data columns (total 50 columns):\n",
-      " #   Column                              Non-Null Count  Dtype  \n",
-      "---  ------                              --------------  -----  \n",
-      " 0   ID                                  16947 non-null  int64  \n",
-      " 1   Region                              16947 non-null  object \n",
-      " 2   Territory                           16947 non-null  object \n",
-      " 3   Pricing, Delivery_Terms_Quote_Appr  16947 non-null  int64  \n",
-      " 4   Pricing, Delivery_Terms_Approved    16947 non-null  int64  \n",
-      " 5   Bureaucratic_Code_0_Approval        16947 non-null  int64  \n",
-      " 6   Bureaucratic_Code_0_Approved        16947 non-null  int64  \n",
-      " 7   Submitted_for_Approval              16947 non-null  int64  \n",
-      " 8   Bureaucratic_Code                   16947 non-null  object \n",
-      " 9   Account_Created_Date                16947 non-null  object \n",
-      " 10  Source                              16947 non-null  object \n",
-      " 11  Billing_Country                     16947 non-null  object \n",
-      " 12  Account_Name                        16947 non-null  object \n",
-      " 13  Opportunity_Name                    16947 non-null  object \n",
-      " 14  Opportunity_ID                      16947 non-null  int64  \n",
-      " 15  Sales_Contract_No                   16947 non-null  object \n",
-      " 16  Account_Owner                       16947 non-null  object \n",
-      " 17  Opportunity_Owner                   16947 non-null  object \n",
-      " 18  Account_Type                        16947 non-null  object \n",
-      " 19  Opportunity_Type                    16947 non-null  object \n",
-      " 20  Quote_Type                          16947 non-null  object \n",
-      " 21  Delivery_Terms                      16947 non-null  object \n",
-      " 22  Opportunity_Created_Date            16947 non-null  object \n",
-      " 23  Brand                               16947 non-null  object \n",
-      " 24  Product_Type                        16947 non-null  object \n",
-      " 25  Size                                16947 non-null  object \n",
-      " 26  Product_Category_B                  16947 non-null  object \n",
-      " 27  Price                               356 non-null    float64\n",
-      " 28  Currency                            16947 non-null  object \n",
-      " 29  Quote_Expiry_Date                   356 non-null    float64\n",
-      " 30  Last_Modified_Date                  356 non-null    float64\n",
-      " 31  Last_Modified_By                    16947 non-null  object \n",
-      " 32  Product_Family                      16947 non-null  object \n",
-      " 33  Product_Name                        16947 non-null  object \n",
-      " 34  ASP_Currency                        16947 non-null  object \n",
-      " 35  ASP                                 13738 non-null  float64\n",
-      " 36  ASP_(converted)_Currency            16947 non-null  object \n",
-      " 37  ASP_(converted)                     13738 non-null  float64\n",
-      " 38  Planned_Delivery_Start_Date         16947 non-null  object \n",
-      " 39  Planned_Delivery_End_Date           16947 non-null  object \n",
-      " 40  Month                               16947 non-null  object \n",
-      " 41  Delivery_Quarter                    16947 non-null  object \n",
-      " 42  Delivery_Year                       16947 non-null  int64  \n",
-      " 43  TRF                                 16947 non-null  int64  \n",
-      " 44  Total_Amount_Currency               16947 non-null  object \n",
-      " 45  Total_Amount                        16888 non-null  float64\n",
-      " 46  Total_Taxable_Amount_Currency       16947 non-null  object \n",
-      " 47  Total_Taxable_Amount                16947 non-null  float64\n",
-      " 48  Stage                               16947 non-null  object \n",
-      " 49  Prod_Category_A                     16947 non-null  object \n",
-      "dtypes: float64(7), int64(9), object(34)\n",
-      "memory usage: 6.5+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "datos.info()"
    ]
