--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -33,7 +33,7 @@
     "    ret_list = []\n",
     "    for i in range(0, len(dataframe.columns)):\n",
     "        aux = datos[dataframe.columns[i]].value_counts()\n",
-    "        if (\"None\" in aux.index):\n",
+    "        if \"None\" in aux.index:\n",
     "            if aux[\"None\"]==len(dataframe):\n",
     "                print(dataframe.columns[i])\n",
     "                continue\n",
