--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "def columnas_invariantes(dataframe):\n",
     "    for i in range(0,len(dataframe.columns)):\n",
-    "        if (len(dataframe[dataframe.columns[i]].value_counts())==1):\n",
+    "        if len(dataframe[dataframe.columns[i]].value_counts())==1:\n",
     "            print(\"La columna \" + dataframe.columns[i] + \" tiene un solo dato\")\n",
     "            print(\"\")"
    ]
