--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "import matplot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +45,22 @@
     "    for i in range(0,len(dataframe.columns)):\n",
     "        if (len(dataframe[dataframe.columns[i]].value_counts())==1):\n",
     "            print(\"La columna \" + dataframe.columns[i] + \" tiene un solo dato\")\n",
-    "            print(\"\")"
+    "            print(\"\")\n",
+    "\n",
+    "def filtrar_columnas_invariantes(dataframe):\n",
+    "    ret_list = []\n",
+    "    for i in range(0,len(dataframe.columns)):\n",
+    "        if (len(dataframe[dataframe.columns[i]].value_counts())>1):\n",
+    "            ret_list.append(dataframe.columns[i])\n",
+    "    return ret_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -78,9 +88,6 @@
       "No hay None\n",
       "\n",
       "Columna: Bureaucratic_Code_0_Approved\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Submitted_for_Approval\n",
       "No hay None\n",
       "\n",
       "Columna: Bureaucratic_Code\n",
@@ -176,9 +183,6 @@
       "Columna: ASP\n",
       "No hay None\n",
       "\n",
-      "Columna: ASP_(converted)_Currency\n",
-      "No hay None\n",
-      "\n",
       "Columna: ASP_(converted)\n",
       "No hay None\n",
       "\n",
@@ -215,15 +219,6 @@
       "\n",
       "Columna: Stage\n",
       "No hay None\n",
-      "\n",
-      "Columna: Prod_Category_A\n",
-      "No hay None\n",
-      "\n",
-      "La columna Submitted_for_Approval tiene un solo dato\n",
-      "\n",
-      "La columna ASP_(converted)_Currency tiene un solo dato\n",
-      "\n",
-      "La columna Prod_Category_A tiene un solo dato\n",
       "\n"
      ]
     }
@@ -237,24 +232,21 @@
     "datos[\"Quote_Expiry_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
     "datos[\"Last_Modified_Date\"] = pd.to_numeric(datos[\"Price\"], errors=\"coerce\")\n",
     "#datos[\"Actual_Delivery_Date\"] = pd.to_numeric(datos[\"Actual_Delivery_Date\"], errors=\"coerce\")\n",
+    "#columnas_invariantes(datos)\n",
+    "datos = datos[filtrar_columnas_invariantes(datos)]\n",
     "\n",
-    "imprimir_proporciones_none(datos)    \n",
-    "columnas_invariantes(datos)"
+    "#Para esta linea ya se tienen filtradas las columnas que solo tienen None o que tiene un dato que se repite\n",
+    "#en todas las lineas\n",
+    "\n",
+    "imprimir_proporciones_none(datos)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datos.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": []
   }
