Empiezo a hacer histograma de TRF y stage

--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import datetime as dt\n",
-    "import matplot"
+    "import numpy as np"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -67,159 +67,7 @@
      "output_type": "stream",
      "text": [
       "Last_Activity\n",
-      "Actual_Delivery_Date\n",
-      "Columna: ID\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Region\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Territory\n",
-      "Hay 4999 None\n",
-      "El porcentaje de None es: 29.497846226470763%\n",
-      "\n",
-      "Columna: Pricing, Delivery_Terms_Quote_Appr\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Pricing, Delivery_Terms_Approved\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Bureaucratic_Code_0_Approval\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Bureaucratic_Code_0_Approved\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Bureaucratic_Code\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Account_Created_Date\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Source\n",
-      "Hay 9497 None\n",
-      "El porcentaje de None es: 56.039417005959756%\n",
-      "\n",
-      "Columna: Billing_Country\n",
-      "Hay 27 None\n",
-      "El porcentaje de None es: 0.15932023366967604%\n",
-      "\n",
-      "Columna: Account_Name\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Opportunity_Name\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Opportunity_ID\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Sales_Contract_No\n",
-      "Hay 6973 None\n",
-      "El porcentaje de None es: 41.145925532542634%\n",
-      "\n",
-      "Columna: Account_Owner\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Opportunity_Owner\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Account_Type\n",
-      "Hay 112 None\n",
-      "El porcentaje de None es: 0.6608839322593969%\n",
-      "\n",
-      "Columna: Opportunity_Type\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Quote_Type\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Delivery_Terms\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Opportunity_Created_Date\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Brand\n",
-      "Hay 15911 None\n",
-      "El porcentaje de None es: 93.88682362660057%\n",
-      "\n",
-      "Columna: Product_Type\n",
-      "Hay 15935 None\n",
-      "El porcentaje de None es: 94.02844161208473%\n",
-      "\n",
-      "Columna: Size\n",
-      "Hay 15967 None\n",
-      "El porcentaje de None es: 94.21726559273027%\n",
-      "\n",
-      "Columna: Product_Category_B\n",
-      "Hay 15928 None\n",
-      "El porcentaje de None es: 93.98713636631852%\n",
-      "\n",
-      "Columna: Price\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Currency\n",
-      "Hay 16052 None\n",
-      "El porcentaje de None es: 94.71882929131999%\n",
-      "\n",
-      "Columna: Quote_Expiry_Date\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Last_Modified_Date\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Last_Modified_By\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Product_Family\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Product_Name\n",
-      "No hay None\n",
-      "\n",
-      "Columna: ASP_Currency\n",
-      "No hay None\n",
-      "\n",
-      "Columna: ASP\n",
-      "No hay None\n",
-      "\n",
-      "Columna: ASP_(converted)\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Planned_Delivery_Start_Date\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Planned_Delivery_End_Date\n",
-      "Hay 75 None\n",
-      "El porcentaje de None es: 0.442556204637989%\n",
-      "\n",
-      "Columna: Month\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Delivery_Quarter\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Delivery_Year\n",
-      "No hay None\n",
-      "\n",
-      "Columna: TRF\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Total_Amount_Currency\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Total_Amount\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Total_Taxable_Amount_Currency\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Total_Taxable_Amount\n",
-      "No hay None\n",
-      "\n",
-      "Columna: Stage\n",
-      "No hay None\n",
-      "\n"
+      "Actual_Delivery_Date\n"
      ]
     }
    ],
@@ -238,15 +86,65 @@
     "#Para esta linea ya se tienen filtradas las columnas que solo tienen None o que tiene un dato que se repite\n",
     "#en todas las lineas\n",
     "\n",
-    "imprimir_proporciones_none(datos)"
+    "#imprimir_proporciones_none(datos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-6-977109377eb4>:16: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  proporcion_ganados = stage_won[0]/apariciones_totales[0]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute 'plt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-977109377eb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbins_toneladas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mproporcion_ganados\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbins_toneladas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mbins_toneladas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Age'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Survival Rate'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    217\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mTester\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 219\u001b[0;31m                 raise AttributeError(\"module {!r} has no attribute \"\n\u001b[0m\u001b[1;32m    220\u001b[0m                                      \"{!r}\".format(__name__, attr))\n\u001b[1;32m    221\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'plt'"
+     ]
+    }
+   ],
+   "source": [
+    "#Por la regla de sturges hago 33 bins para el histograma de proporciones\n",
+    "\n",
+    "#Como hacer el histograma que quiero hacer: \n",
+    "#https://stackoverflow.com/questions/40092294/creating-a-matplotlib-or-seaborn-histogram-which-uses-percent-rather-than-count\n",
+    "trf_stage_won = datos.loc[datos[\"Stage\"] == \"Closed Won\",\"TRF\"]\n",
+    "#trf_otro_stage = datos.loc[datos[\"Stage\"] != \"Closed Won\",\"TRF\"]\n",
+    "bins_toneladas = np.linspace(0,500,33)\n",
+    "\n",
+    "#Cantidad de operaciones en las que se tuvo un TRF que pertenece a un bin en particular\n",
+    "apariciones_totales = np.histogram(datos[\"TRF\"],bins=bins_toneladas,range=(0,500))\n",
+    "\n",
+    "#Cantidad de casos ganados por bin\n",
+    "stage_won = np.histogram(trf_stage_won,bins=bins_toneladas,range=(0,500))\n",
+    "\n",
+    "\n",
+    "proporcion_ganados = stage_won[0]/apariciones_totales[0]\n",
+    "\n",
+    "\n",
+    "plt.bar(bins_toneladas[:-1],proporcion_ganados,width=bins_toneladas[1]-bins_toneladas[0])\n",
+    "plt.xlabel('Age')\n",
+    "plt.ylabel('Survival Rate')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
