Agrego histograma para cantidad de TRF

--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -535,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Para evitar el problema de la ecuación de Demoivre, se analizan solo los TRF con más de 100 instancias"
+    "#Para evitar el problema de la ecuación de Demoivre, se analizan solo los TRF con más de 100 instancias\n"
    ]
   }
  ],
