Me doy cuenta de que el analisis de Total_Taxable_Amount promedio es inutil porque el desvio estandar es gigante

--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -178,7 +178,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f9d2c491040>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc92ed2b9d0>"
       ]
      },
      "execution_count": 5,
@@ -655,7 +655,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f9cffb74ee0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fc92de36040>"
       ]
      },
      "execution_count": 8,
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -758,6 +758,7 @@
        "      <th>Quote_Type</th>\n",
        "      <th>Total_Taxable_Amount_count</th>\n",
        "      <th>Total_Taxable_Amount_mean</th>\n",
+       "      <th>Total_Taxable_Amount_std</th>\n",
        "      <th>Stage_proporcion_won</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -767,6 +768,7 @@
        "      <td>Binding</td>\n",
        "      <td>121</td>\n",
        "      <td>5.932731e+06</td>\n",
+       "      <td>1.875955e+07</td>\n",
        "      <td>0.512397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -774,6 +776,7 @@
        "      <td>Non Binding</td>\n",
        "      <td>8986</td>\n",
        "      <td>3.407635e+06</td>\n",
+       "      <td>2.563019e+07</td>\n",
        "      <td>0.536501</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -785,12 +788,12 @@
        "0      Binding                         121               5.932731e+06   \n",
        "1  Non Binding                        8986               3.407635e+06   \n",
        "\n",
-       "   Stage_proporcion_won  \n",
-       "0              0.512397  \n",
-       "1              0.536501  "
+       "   Total_Taxable_Amount_std  Stage_proporcion_won  \n",
+       "0              1.875955e+07              0.512397  \n",
+       "1              2.563019e+07              0.536501  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,25 +809,26 @@
     "        [[\"Quote_Type\",\"Total_Taxable_Amount\",\"Stage\"]]#Guarda las filas sin repetir op_id\n",
     "oportunidades_no_duplicadas = oportunidades_no_duplicadas[oportunidades_no_duplicadas[\"Total_Taxable_Amount\"]!=0]\n",
     "valores_por_quote = oportunidades_no_duplicadas.groupby(\"Quote_Type\").\\\n",
-    "        agg({\"Total_Taxable_Amount\":[\"count\",\"mean\"],\"Stage\":proporcion_won})\n",
+    "        agg({\"Total_Taxable_Amount\":[\"count\",\"mean\",\"std\"],\"Stage\":proporcion_won})\n",
     "valores_por_quote.columns=valores_por_quote.columns.get_level_values(0)+\"_\"+\\\n",
     "        valores_por_quote.columns.get_level_values(1)\n",
     "valores_por_quote.reset_index(inplace=True)\n",
-    "valores_por_quote"
+    "valores_por_quote\n",
+    "#oportunidades_no_duplicadas[oportunidades_no_duplicadas[\"Quote_Type\"]==\"Non Binding\"][\"Total_Taxable_Amount\"].std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f9cff9a8370>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fc92dc64ac0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
