Agrego analisis de delivery terms

--- a/BureaucraticCode.ipynb
+++ b/BureaucraticCode.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7f5ac0116c40>"
+      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc98543400>"
      },
-     "execution_count": 104,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "source": [
-    "codesCount = codesCount[(codesCount['index'] != '4') & (codesCount['index'] != '5')]\n",
+    "codesCount = codesCount[~codesCount['index'].isin(['4', '5'])]\n",
     "sns.barplot(x='Bureaucratic Code', y='Occurrences', data=(codesCount.rename(columns=\n",
     "            {'index':'Bureaucratic Code', 'Bureaucratic_Code':'Occurrences'})),\n",
     "            order=codesCount['index'])"
@@ -118,13 +118,13 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 105,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7f5abd08d9a0>"
+      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc99258eb0>"
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -158,13 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7f5abd80d190>"
+      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc992863a0>"
      },
-     "execution_count": 106,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -212,13 +212,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7f5abce45a30>"
+      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc99341ac0>"
      },
-     "execution_count": 107,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
