--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -52,7 +52,7 @@
     "def filtrar_columnas_invariantes(dataframe):\n",
     "    ret_list = []\n",
     "    for i in range(0,len(dataframe.columns)):\n",
-    "        if (len(dataframe[dataframe.columns[i]].value_counts())>1):\n",
+    "        if len(dataframe[dataframe.columns[i]].value_counts())>1:\n",
     "            ret_list.append(dataframe.columns[i])\n",
     "    return ret_list"
    ]
@@ -325,7 +325,7 @@
     "oportunidades_no_duplicadas = datos.drop_duplicates([\"Opportunity_ID\"])\\\n",
     "        [[\"Quote_Type\",\"Total_Taxable_Amount\", \"Total_Taxable_Amount_Currency\",\"Stage\"]]#Guarda las filas sin repetir op_id\n",
     "oportunidades_no_duplicadas = oportunidades_no_duplicadas[oportunidades_no_duplicadas[\"Total_Taxable_Amount\"]!=0]\n",
-    "oportunidades_no_duplicadas = oportunidades_no_duplicadas.merge(conversion_promedio, \\\n",
+    "oportunidades_no_duplicadas = oportunidades_no_duplicadas.merge(conversion_promedio,\n",
     "                                  left_on = \"Total_Taxable_Amount_Currency\", right_on = \"Currency\")\n",
     "oportunidades_no_duplicadas[\"Total_Taxable_Amount\"] = oportunidades_no_duplicadas[\"Total_Taxable_Amount\"] * \\\n",
     "                                                      oportunidades_no_duplicadas[\"Equivalencia Moneda USD\"]\n",
@@ -426,7 +426,7 @@
     "    return string[string.find(\"_\",aux+1)+1:]\n",
     "\n",
     "oportunidades_no_duplicadas = df_por_op_id.drop_duplicates([\"Opportunity_ID\"])\n",
-    "porcentajes_won_por_tipo = pd.pivot_table(oportunidades_no_duplicadas, index = \"Account_Owner\", \\\n",
+    "porcentajes_won_por_tipo = pd.pivot_table(oportunidades_no_duplicadas, index = \"Account_Owner\",\n",
     "                                  columns = \"Opportunity_Type\", values= \"Stage\", aggfunc = proporcion_won)\n",
     "\n",
     "columnas = []\n",
@@ -491,10 +491,10 @@
     "\n",
     "datos_acc_type = datos.drop_duplicates(subset=\"Opportunity_ID\")\n",
     "datos_acc_type = datos_acc_type[[\"Account_Type\", \"Total_Taxable_Amount\", \"Total_Taxable_Amount_Currency\",\"Stage\"]]\n",
-    "datos_acc_type = datos_acc_type.merge(conversion_promedio, \\\n",
+    "datos_acc_type = datos_acc_type.merge(conversion_promedio,\n",
     "                                  left_on = \"Total_Taxable_Amount_Currency\", right_on = \"Currency\")\n",
     "datos_acc_type = datos_acc_type[[\"Account_Type\", \"Total_Taxable_Amount\",\"Stage\"]]\n",
-    "datos_acc_type = datos_acc_type.groupby(\"Account_Type\").agg({\"Total_Taxable_Amount\":[\"mean\",\"std\"],\\\n",
+    "datos_acc_type = datos_acc_type.groupby(\"Account_Type\").agg({\"Total_Taxable_Amount\":[\"mean\",\"std\"],\n",
     "                                                            \"Stage\":proporcion_won})\n",
     "level_0 = datos_acc_type.columns.get_level_values(0)\n",
     "level_1 = datos_acc_type.columns.get_level_values(1)\n",
