Commit para que agus no rompa todo

--- a/Brand Analysis.ipynb
+++ b/Brand Analysis.ipynb
@@ -1460,6 +1460,7 @@
     }
    ],
    "source": [
+    "#ASP(converted) es siempre USD\n",
     "brandsVsASP = opportunities[[\"Brand\",\"ASP_(converted)\",\"Opportunity_ID\"]].groupby(\"Brand\").agg({\"ASP_(converted)\":\"mean\",\"Opportunity_ID\":\"count\"})\n",
     "#brandsVsASP = brandsVsASP[brandsVsASP[\"Opportunity_ID\"] > 10]\n",
     "brandsVsASP = brandsVsASP.reset_index()\n",
