--- a/Size Analysis.ipynb
+++ b/Size Analysis.ipynb
@@ -309,6 +309,7 @@
     }
    ],
    "source": [
+    "#ASP(converted) es siempre USD\n",
     "aspBySize = opportunities[[\"Size\",\"ASP_(converted)\",\"Opportunity_ID\"]].groupby(\"Size\").agg({\"ASP_(converted)\":\"mean\",\"Opportunity_ID\":\"count\"})\n",
     "aspBySize = aspBySize.reset_index()\n",
     "aspBySize.rename(columns={\"ASP_(converted)\":\"ASP(Dolar)\", \"Size\":\"Tamaño\",\"Opportunity_ID\":\"Cantidad\"}, inplace=True) \n",
