--- a/Source Analysis.ipynb
+++ b/Source Analysis.ipynb
@@ -1040,6 +1040,7 @@
     }
    ],
    "source": [
+    "#ASP(converted) es siempre USD\n",
     "aspBySource = opportunities[[\"Source\",\"ASP_(converted)\",\"Opportunity_ID\"]].groupby(\"Source\").\\\n",
     "    agg({\"ASP_(converted)\":\"mean\",\"Opportunity_ID\":\"count\"}).sort_values(by=\"ASP_(converted)\")\n",
     "aspBySource.reset_index(inplace=True)\n",
