--- a/Op_Type Analysis.ipynb
+++ b/Op_Type Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "21   Opportunity_Type_8   Closed Won       516    735"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        " Text(0, 0, 'Opportunity_Type_8')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,12 +478,13 @@
        "1    Opportunity_Type_1         0.440101      5160"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#ASP(converted) es siempre USD\n",
     "opTypesVsASP = opportunities[[\"Opportunity_Type\",\"ASP_(converted)\",\"Opportunity_ID\"]].groupby(\"Opportunity_Type\").\\\n",
     "            agg({\"ASP_(converted)\":\"mean\",\"Opportunity_ID\":\"count\"})\n",
     "opTypesVsASP.rename(columns={\"Opportunity_ID\":\"Cantidad\"},inplace=True)\n",
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +511,7 @@
        " Text(0, 0, 'Opportunity_Type_1')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -530,6 +531,183 @@
    "source": [
     "plot = sns.barplot(x=\"Opportunity_Type\",y=\"ASP_(converted)\",data=opTypesVsASP)\n",
     "plot.set_xticklabels(plot.get_xticklabels(), rotation=90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TRF</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_0</th>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_1</th>\n",
+       "      <td>0.927409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_10</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_11</th>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_12</th>\n",
+       "      <td>0.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_13</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_14</th>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_15</th>\n",
+       "      <td>1.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_16</th>\n",
+       "      <td>1.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_17</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_18</th>\n",
+       "      <td>8.363636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_19</th>\n",
+       "      <td>15.770526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_2</th>\n",
+       "      <td>0.757143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_20</th>\n",
+       "      <td>6.234286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_21</th>\n",
+       "      <td>4.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_22</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_23</th>\n",
+       "      <td>5.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_24</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_3</th>\n",
+       "      <td>0.818182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_4</th>\n",
+       "      <td>0.549020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_5</th>\n",
+       "      <td>4.071429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_6</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_7</th>\n",
+       "      <td>0.216901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_8</th>\n",
+       "      <td>0.249657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opportunity_Type_9</th>\n",
+       "      <td>0.434783</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           TRF\n",
+       "Opportunity_Type              \n",
+       "Opportunity_Type_0    0.375000\n",
+       "Opportunity_Type_1    0.927409\n",
+       "Opportunity_Type_10   0.000000\n",
+       "Opportunity_Type_11   0.666667\n",
+       "Opportunity_Type_12   0.222222\n",
+       "Opportunity_Type_13   5.000000\n",
+       "Opportunity_Type_14   0.066667\n",
+       "Opportunity_Type_15   1.333333\n",
+       "Opportunity_Type_16   1.250000\n",
+       "Opportunity_Type_17   0.500000\n",
+       "Opportunity_Type_18   8.363636\n",
+       "Opportunity_Type_19  15.770526\n",
+       "Opportunity_Type_2    0.757143\n",
+       "Opportunity_Type_20   6.234286\n",
+       "Opportunity_Type_21   4.500000\n",
+       "Opportunity_Type_22   0.500000\n",
+       "Opportunity_Type_23   5.200000\n",
+       "Opportunity_Type_24   0.000000\n",
+       "Opportunity_Type_3    0.818182\n",
+       "Opportunity_Type_4    0.549020\n",
+       "Opportunity_Type_5    4.071429\n",
+       "Opportunity_Type_6    0.000000\n",
+       "Opportunity_Type_7    0.216901\n",
+       "Opportunity_Type_8    0.249657\n",
+       "Opportunity_Type_9    0.434783"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opportunities[[\"Opportunity_Type\",\"TRF\"]].groupby(\"Opportunity_Type\").agg({\"TRF\":\"mean\"})"
    ]
   },
   {
