Agrego imagen del orden jerarquico de las estapas y modifico el analisis de codigo burocratico

--- a/BureaucraticCode.ipynb
+++ b/BureaucraticCode.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc98543400>"
+      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7f37977a69a0>"
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,13 +118,13 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc99258eb0>"
+      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7f3779572790>"
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -158,13 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc992863a0>"
+      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7f3779548790>"
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -212,13 +212,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc99341ac0>"
+      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7f3778c8c640>"
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -325,6 +325,29 @@
     "for index, row in bureaucraticApprovals.iterrows():\n",
     "    ax.text(i, row['Approved Rate'] + 0.01, round(row['Approved Rate']/row['Need Approval Rate'], 3), color='black', ha=\"center\")\n",
     "    i = i + 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Closed Won       5072\nClosed Lost      4719\nProposal           30\nNegotiation        11\nQualification       9\nName: Stage, dtype: int64"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Stage'].value_counts()"
    ],
    "metadata": {
     "collapsed": false,
