--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -639,7 +639,7 @@
        "[16883 rows x 47 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7733f79820>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb0f4fe3b20>"
       ]
      },
      "execution_count": 5,
@@ -1229,7 +1229,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f773353e9d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb1201fc6d0>"
       ]
      },
      "execution_count": 8,
@@ -1481,7 +1481,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f7733412be0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb0f4457610>"
       ]
      },
      "execution_count": 11,
@@ -2126,7 +2126,7 @@
     "\n",
     "plt.xlabel(\"Opportunity_Type\")\n",
     "plt.title(\"Proporcion de ventas ganadas de dueños de la cuenta por tipo de oportunidad\")\n",
-    "plt.savefig(\"Proporcion de ventas ganadas de dueños de la cuenta por tipo de oportunidad.png\")              \n",
+    "plt.savefig(\"img/empleados/Proporcion de ventas ganadas de dueños de la cuenta por tipo de oportunidad.png\")              \n",
     "plt.show()"
    ]
   },
@@ -2304,7 +2304,7 @@
     "\n",
     "plt.xlabel(\"Opportunity_Type\")\n",
     "plt.title(\"Proporcion de ventas ganadas de dueños de la oportunidad por tipo de oportunidad\")\n",
-    "plt.savefig(\"Proporcion de ventas ganadas de dueños de la oportunidad por tipo de oportunidad.png\")              \n",
+    "plt.savefig(\"img/empleados/Proporcion de ventas ganadas de dueños de la oportunidad por tipo de oportunidad.png\")              \n",
     "plt.show()"
    ]
   },
@@ -2350,7 +2350,7 @@
     "\n",
     "plt.xlabel(\"Account_Type\")\n",
     "plt.title(\"Proporcion de ventas ganadas de dueños de la cuenta por tipo de cuenta\")\n",
-    "plt.savefig(\"Proporcion de ventas ganadas de dueños de la cuenta por tipo de cuenta.png\")\n",
+    "plt.savefig(\"img/empleados/Proporcion de ventas ganadas de dueños de la cuenta por tipo de cuenta.png\")\n",
     "plt.show()"
    ]
   },
@@ -2425,7 +2425,7 @@
     "\n",
     "plt.xlabel(\"Account_Type\")\n",
     "plt.title(\"Proporcion de ventas ganadas de dueños de la cuenta por tipo de cuenta\")\n",
-    "plt.savefig(\"Proporcion de ventas ganadas de dueños de la cuenta por tipo de cuenta.png\")\n",
+    "plt.savefig(\"img/empleados/Proporcion de ventas ganadas de dueños de la cuenta por tipo de cuenta.png\")\n",
     "plt.show()"
    ]
   },
