Agrego fotos de analisis

--- a/DeliveryTerms.ipynb
+++ b/DeliveryTerms.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -26,6 +26,7 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "data = pd.read_csv('Entrenamieto_ECI_2020.csv').drop_duplicates(subset=['Opportunity_ID'])\n",
     "#No cuento opportunities repetidos, el resultado igual es por opportunity\n",
@@ -54,21 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [
-    {
-     "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fb01dc8da00>"
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": "<Figure size 432x288 with 1 Axes>",
@@ -84,7 +77,9 @@
     "termsCount = deliveryTerms['Delivery_Terms'].value_counts().to_frame().reset_index().sort_values('Delivery_Terms')\n",
     "\n",
     "sns.barplot(x='Delivery Terms', y='Occurrences', data=(termsCount.rename(columns=\n",
-    "            {'index':'Delivery Terms', 'Delivery_Terms':'Occurrences'})), order=termsCount['index'])"
+    "            {'index':'Delivery Terms', 'Delivery_Terms':'Occurrences'})), order=termsCount['index'])\n",
+    "\n",
+    "plt.savefig('img/DeliveryTerms/DTermsOccurrences.png')"
    ]
   },
   {
@@ -96,21 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [
-    {
-     "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fb01dcf1b80>"
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": "<Figure size 432x288 with 1 Axes>",
@@ -126,7 +113,9 @@
     "termsCount = termsCount[termsCount['index'].isin(['0', '3', '7', '8'])]\n",
     "sns.barplot(x='Delivery Terms', y='Occurrences', data=(termsCount.rename(columns=\n",
     "            {'index':'Delivery Terms', 'Delivery_Terms':'Occurrences'})),\n",
-    "            order=termsCount['index'])"
+    "            order=termsCount['index'])\n",
+    "\n",
+    "plt.savefig('img/DeliveryTerms/DTermsFiltered.png')"
    ]
   },
   {
@@ -142,21 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [
-    {
-     "data": {
-      "text/plain": "<matplotlib.axes._subplots.AxesSubplot at 0x7fb01dc492b0>"
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": "<Figure size 432x288 with 1 Axes>",
@@ -177,7 +158,9 @@
     "wonOpportunityRate.rename(columns={'Delivery_Terms':'Delivery Terms', 'Stage':'Won Opportunity Rate'}, inplace=True)\n",
     "\n",
     "sns.barplot(x='Delivery Terms', y='Won Opportunity Rate', data=wonOpportunityRate,\n",
-    "            order=wonOpportunityRate['Delivery Terms'])"
+    "            order=wonOpportunityRate['Delivery Terms'])\n",
+    "\n",
+    "plt.savefig('img/DeliveryTerms/DTermsWonRate.png')"
    ]
   },
   {
@@ -192,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -242,7 +225,9 @@
     "i = 0\n",
     "for index, row in termsApprovals.iterrows():\n",
     "    ax.text(i, row['Approved Rate'] + 0.01, round(row['Approved Rate']/row['Need Approval Rate'], 3), color='black', ha=\"center\")\n",
-    "    i = i + 1\n"
+    "    i = i + 1\n",
+    "\n",
+    "plt.savefig('img/DeliveryTerms/DTermsApprovalRate.png')"
    ],
    "metadata": {
     "collapsed": false,
