Paso los graficos a la paleta de colores, termino analisis

--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -2620,6 +2620,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Genero un dataframe que termine teniendo la fecha de creacion de la oportunidad, el id de la oportunidad,\n",
+    "#la region de la oportunidad, y el precio total de los productos pagados\n",
+    "aux_df = datos[[\"Opportunity_ID\", \"Total_Amount\", \"Total_Amount_Currency\"]].\\\n",
+    "        merge(conversion_promedio, left_on = \"Total_Amount_Currency\", right_on = \"Currency\")\n",
+    "aux_df[\"Total_Amount\"] = aux_df[\"Total_Amount\"] * aux_df[\"Equivalencia Moneda USD\"]\n",
+    "aux_df = aux_df[[\"Opportunity_ID\", \"Total_Amount\"]]\n",
+    "\n",
+    "precios_totales_pagados = aux_df.groupby(\"Opportunity_ID\").agg({\"Total_Amount\":\"sum\"})\n",
+    "inversion_por_region_y_fecha = datos[[\"Opportunity_ID\", \"Opportunity_Created_Date\", \"Region\"]].\\\n",
+    "        drop_duplicates(subset=[\"Opportunity_ID\"])\n",
+    "inversion_por_region_y_fecha[\"Opportunity_Created_Date\"] = \\\n",
+    "        inversion_por_region_y_fecha[\"Opportunity_Created_Date\"].dt.year\n",
+    "\n",
+    "#Se termina de generar el dfr que se queria generar\n",
+    "inversion_por_region_y_fecha = inversion_por_region_y_fecha.\\\n",
+    "        merge(precios_totales_pagados, on = \"Opportunity_ID\")\n",
+    "\n",
+    "#Filtro los Total_Amount mayores a ese valor porque son muy pocos\n",
+    "inversion_por_region_y_fecha = inversion_por_region_y_fecha[inversion_por_region_y_fecha[\"Total_Amount\"] < 10e4]\n",
+    "\n",
+    "#inversion_por_region_y_fecha.reset_index(inplace = True)\n",
+    "inversion_por_region_y_fecha"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#sns.scatterplot(x='Estimated Delivery Days', y='Won Opportunity Rate', data=wonRateByDateDiff)\n",
+    "#scatter = sns.scatterplot(x=\"Opportunity_Created_Date\", y=\"Total_Amount\", alpha=0.3, \\\n",
+    "#                          data=inversion_por_region_y_fecha)\n",
+    "#scatter.set(xlim = (pd.to_datetime(\"2016-01-01\", errors=\"coerce\"), pd.to_datetime(\"2019-1-10\", errors=\"coerce\")))\n",
+    "\n",
+    "sns.violinplot(x = \"Opportunity_Created_Date\", y = \"Total_Amount\", data = inversion_por_region_y_fecha)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -2755,30 +2809,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "#Genero un dataframe que termine teniendo la fecha de creacion de la oportunidad, el id de la oportunidad,\n",
-    "#la region de la oportunidad, y el precio total de los productos pagados\n",
-    "aux_df = datos[[\"Opportunity_ID\", \"Total_Amount\", \"Total_Amount_Currency\"]].\\\n",
-    "        merge(conversion_promedio, left_on = \"Total_Amount_Currency\", right_on = \"Currency\")\n",
-    "aux_df[\"Total_Amount\"] = aux_df[\"Total_Amount\"] * aux_df[\"Equivalencia Moneda USD\"]\n",
-    "aux_df = aux_df[[\"Opportunity_ID\", \"Total_Amount\"]]\n",
-    "\n",
-    "precios_totales_pagados = aux_df.groupby(\"Opportunity_ID\").agg({\"Total_Amount\":\"sum\"})\n",
-    "inversion_por_region_y_fecha = datos[[\"Opportunity_ID\", \"Opportunity_Created_Date\", \"Region\"]].\\\n",
-    "        drop_duplicates(subset=[\"Opportunity_ID\"])\n",
-    "inversion_por_region_y_fecha[\"Opportunity_Created_Date\"] = \\\n",
-    "        inversion_por_region_y_fecha[\"Opportunity_Created_Date\"].dt.year\n",
-    "\n",
-    "#Se termina de generar el dfr que se queria generar\n",
-    "inversion_por_region_y_fecha = inversion_por_region_y_fecha.\\\n",
-    "        merge(precios_totales_pagados, on = \"Opportunity_ID\")\n",
-    "\n",
-    "#Filtro los Total_Amount mayores a ese valor porque son muy pocos\n",
-    "inversion_por_region_y_fecha = inversion_por_region_y_fecha[inversion_por_region_y_fecha[\"Total_Amount\"] < 10e4]\n",
-    "\n",
-    "#inversion_por_region_y_fecha.reset_index(inplace = True)\n",
-    "inversion_por_region_y_fecha"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
