--- a/AnalisisGeografico.ipynb
+++ b/AnalisisGeografico.ipynb
@@ -339,7 +339,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### AL mismo tiempo vamos a analizar sobre oportunidad, por lo tanto filtramos los duplicados en base a esto.\n"
    ]
@@ -534,7 +538,11 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -598,7 +606,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Stage Segun Region."
    ]
@@ -606,7 +618,11 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "region = datos[ ['Region', 'Stage'] ]"
@@ -721,7 +737,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Para veitar demoivre (analizado en otros notebooks), se procede a eliminar los casos que no son Closed Lost ni Closed Won."
    ]
@@ -730,7 +750,10 @@
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -872,7 +895,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Relacion de Closed Won over cases en los 10 territorios mas populares."
    ]
@@ -881,7 +908,10 @@
    "cell_type": "code",
    "execution_count": 135,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1109,7 +1139,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Ahora quiero las regiones con mayor ratio de aprobacion."
    ]
@@ -1382,6 +1416,324 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grouped.iloc[0].values[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(2,3,figsize=(10,10))\n",
+    "plt.subplots_adjust(hspace = 0.8)\n",
+    "\n",
+    "labels = ['Closed Won', 'Closed Lost']\n",
+    "\n",
+    "sizes = [grouped.iloc[0].values[0],\n",
+    "        1 - grouped.iloc[0].values[0] ]\n",
+    "    \n",
+    "axs[0][0].pie(sizes, labels=labels, autopct='%1.1f%%', shadow=False)\n",
+    "#axs[i].axis('equal')\n",
+    "axs[0][0].set_title(grouped.index[0])\n",
+    "\n",
+    "sizes = [grouped.iloc[1].values[0],\n",
+    "        1 - grouped.iloc[1].values[0] ]\n",
+    "    \n",
+    "axs[0][1].pie(sizes, labels=labels, autopct='%1.1f%%', shadow=False)\n",
+    "#axs[i].axis('equal')\n",
+    "axs[0][1].set_title(grouped.index[1])\n",
+    "\n",
+    "\n",
+    "sizes = [grouped.iloc[2].values[0],\n",
+    "        1 - grouped.iloc[2].values[0] ]\n",
+    "    \n",
+    "axs[0][2].pie(sizes, labels=labels, autopct='%1.1f%%', shadow=False)\n",
+    "#axs[i].axis('equal')\n",
+    "axs[0][2].set_title(grouped.index[2])\n",
+    "\n",
+    "\n",
+    "sizes = [grouped.iloc[3].values[0],\n",
+    "        1 - grouped.iloc[3].values[0] ]\n",
+    "    \n",
+    "axs[1][0].pie(sizes, labels=labels, autopct='%1.1f%%', shadow=False)\n",
+    "#axs[i].axis('equal')\n",
+    "axs[1][0].set_title(grouped.index[3])\n",
+    "\n",
+    "\n",
+    "sizes = [grouped.iloc[4].values[0],\n",
+    "        1 - grouped.iloc[4].values[0] ]\n",
+    "    \n",
+    "axs[1][2].pie(sizes, labels=labels, autopct='%1.1f%%', shadow=False)\n",
+    "#axs[i].axis('equal')\n",
+    "axs[1][2].set_title(grouped.index[4])\n",
+    "\n",
+    "axs[1][1].axis('off')\n",
+    "\n",
+    "fig.subplots_adjust(wspace=0.05, hspace=0.05)\n",
+    "fig.suptitle(\"Final state of stage in Region\" )\n",
+    "\n",
+    "\n",
+    "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Total taxable amount por region"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "datos_short = datos[['Region','Total_Taxable_Amount', 'Total_Taxable_Amount_Currency']]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Paso todo a USD al cambio del 15/11/2020"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "datos_short['Total_Taxable_Amount_Currency'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Me quedo con un elemento por cada operacion."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "datos_short"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def cambio(x):\n",
+    "    currency = x['Total_Taxable_Amount_Currency']\n",
+    "    amount = x['Total_Taxable_Amount']\n",
+    "    if currency == 'USD':\n",
+    "        return (amount)/1000000\n",
+    "    if currency == 'JPY':\n",
+    "        return (amount*0.0096)/1000000\n",
+    "    if currency == 'EUR':\n",
+    "        return (amount*1.18)/1000000\n",
+    "    if currency == 'AUD':\n",
+    "        return (amount*0.73)/1000000\n",
+    "    if currency == 'GBP':\n",
+    "        return (amount*1.29483)/1000000"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "datos_short['Total_Taxable_Amount_MILL_USD'] = datos_short.apply(cambio, axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "datos_short = datos_short[ ['Region', 'Total_Taxable_Amount_MILL_USD'] ]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grouped = datos_short.groupby('Region').mean()\n",
+    "grouped"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grouped.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grouped.columns = ['Total_Taxable_Amount_Mean']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grouped"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grouped = grouped.reset_index()\n",
+    "grouped"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "ordered_df = grouped.sort_values(by='Total_Taxable_Amount_Mean')\n",
+    "my_range= range(1,len(ordered_df.index)+1)\n",
+    "plt.figure(figsize=(16,8))\n",
+    "import seaborn as sns\n",
+    "plt.hlines(y=my_range, xmin=0, xmax=ordered_df['Total_Taxable_Amount_Mean'], color='black')\n",
+    "plt.plot(ordered_df['Total_Taxable_Amount_Mean'], my_range, \"o\")\n",
+    " \n",
+    "\n",
+    "plt.yticks(my_range, ordered_df['Region'], size = 16)\n",
+    "plt.xticks( np.arange(0, 2.6, 0.2) ) \n",
+    "\n",
+    "plt.title(\"Mean of taxable amount per Region\", loc='center', size = 18)\n",
+    "plt.xlabel('(Millons of USD)', size = 16)\n",
+    " "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 140,
    "metadata": {
     "scrolled": true
@@ -1398,9 +1750,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "grouped.iloc[0].values[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
